Refactor to high-graded DDD Architecture